Use Flex Box for correct map height and overflow

--- a/front/src/app/navigation/navigation.page.scss
+++ b/front/src/app/navigation/navigation.page.scss
@@ -2,7 +2,6 @@
     padding: 2px;
     overflow-y: scroll;
     overflow-x: scroll;
-    height: calc(100% - 60px);
     scrollbar-width: none; // FF
     -ms-overflow-style: none; // IE
 }
